install_data(
    join_paths('hicolor/scalable/apps/', '@0@.svg'.format(application_id)),
    install_dir: join_paths(datadir, 'icons', 'hicolor/scalable/apps')
)

install_data(
    join_paths('hicolor/symbolic/apps/', 'org.gnome.BreakTimer-symbolic.svg'),
    install_dir: join_paths(datadir, 'icons', 'hicolor/symbolic/apps'),
    rename: '@0@-symbolic.svg'.format(application_id),
)
