daemon_sources = files(
    'activity/ActivityMonitorBackend.vala',
    'activity/ActivityMonitor.vala',
    'activity/MutterActivityMonitorBackend.vala',
    'activity/UserActivity.vala',
    'Application.vala',
    'break/BreakController.vala',
    'break/BreakType.vala',
    'break/BreakView.vala',
    'BreakManagerDBusObject.vala',
    'BreakManager.vala',
    'main.vala',
    'microbreak/MicroBreakController.vala',
    'microbreak/MicroBreakType.vala',
    'microbreak/MicroBreakView.vala',
    'restbreak/RestBreakController.vala',
    'restbreak/RestBreakType.vala',
    'restbreak/RestBreakView.vala',
    'SessionStatus.vala',
    'timerbreak/TimerBreakController.vala',
    'timerbreak/TimerBreakDBusObject.vala',
    'timerbreak/TimerBreakType.vala',
    'timerbreak/TimerBreakView.vala',
    'UIFragment.vala',
    'UIManager.vala',
    'util/Countdown.vala',
    'util/PausableTimeout.vala',
    'util/SimpleFocusManager.vala',
    'util/StatefulTimer.vala',
    'util/TimeUnit.vala'
)
