# TODO: BUILD IN DATA FILES
# $(top_srcdir)/settings/resources.c: $(top_srcdir)/data/gnome-break-timer.gresource.xml $(shell $(GLIB_COMPILE_RESOURCES) --generate-dependencies --sourcedir=$(top_srcdir)/data/ $(top_srcdir)/data/gnome-break-timer.gresource.xml)
#     $(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) --target=$@ --sourcedir=$(top_srcdir)/data/ --generate-source $<

settings_sources = files(
    'BreakInfoPanel.vala',
    'BreakManager.vala',
    'BreakSettingsDialog.vala',
    'BreakSettingsPanel.vala',
    'BreakStatusPanel.vala',
    'BreakType.vala',
    'CircleCounter.vala',
    'main.vala',
    'MainWindow.vala',
    'MicroBreakInfoPanel.vala',
    'MicroBreakSettingsPanel.vala',
    'MicroBreakStatusPanel.vala',
    'MicroBreakType.vala',
    'OverlayArrow.vala',
    'RestBreakInfoPanel.vala',
    'RestBreakSettingsPanel.vala',
    'RestBreakStatusPanel.vala',
    'RestBreakType.vala',
    'SettingsApplication.vala',
    'TimeChooser.vala',
    'TimerBreakSettingsPanel.vala',
    'TimerBreakStatusPanel.vala',
    'TimerBreakType.vala'
)
