# TODO: BUILD IN DATA FILES
# $(top_srcdir)/settings/resources.c: $(top_srcdir)/data/gnome-break-timer.gresource.xml $(shell $(GLIB_COMPILE_RESOURCES) --generate-dependencies --sourcedir=$(top_srcdir)/data/ $(top_srcdir)/data/gnome-break-timer.gresource.xml)
#     $(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) --target=$@ --sourcedir=$(top_srcdir)/data/ --generate-source $<

settings_sources = files(
    'Application.vala',
    'break/BreakInfoWidget.vala',
    'break/BreakSettingsWidget.vala',
    'break/BreakStatusWidget.vala',
    'break/BreakType.vala',
    'BreakManager.vala',
    'BreakSettingsDialog.vala',
    'main.vala',
    'MainWindow.vala',
    'microbreak/MicroBreakInfoWidget.vala',
    'microbreak/MicroBreakSettingsWidget.vala',
    'microbreak/MicroBreakStatusWidget.vala',
    'microbreak/MicroBreakType.vala',
    'panels/StatusPanel.vala',
    'panels/WelcomePanel.vala',
    'restbreak/RestBreakInfoWidget.vala',
    'restbreak/RestBreakSettingsWidget.vala',
    'restbreak/RestBreakStatusWidget.vala',
    'restbreak/RestBreakType.vala',
    'timerbreak/TimerBreakSettingsWidget.vala',
    'timerbreak/TimerBreakStatusWidget.vala',
    'timerbreak/TimerBreakType.vala',
    'widgets/BreakConfigurationChooser.vala',
    'widgets/CircleCounter.vala',
    'widgets/FixedSizeGrid.vala',
    'widgets/OverlayArrow.vala',
    'widgets/TimeChooser.vala'
)
